Fix image height and align text

--- a/ong/static/stylesheets/noticias.css
+++ b/ong/static/stylesheets/noticias.css
@@ -1,3 +1,8 @@
-main {
-    padding-left: 50px;
+#p-noticias img {
+    height: 200px;
+}
+
+#p-noticias div {
+    text-align: justify;
+    text-justify: inter-word;
 }
